tests/cases/ffi/ok/ffi-c-callback.ari
extern "C" fn ari_test_apply_i64(op: fn(i64) -> i64, value: i64) -> i64;

fn add_ten(value: i64) -> i64 {
  return value + 10;
}

fn main() -> i64 {
  return ari_test_apply_i64(add_ten, 5);
}
